[package]
name = "bftextmaker"
authors=["starryuwu"]
readme="README.md"
description="Crate for rust to generate brainfuck code that prints out a given string"
version = "0.1.0"
edition = "2021"
license="MIT OR Apache-2.0"
repository="https://github.com/jacks0n9/bftextmaker"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
